Minor fix so that side-menu login buttons don't overlap settings button

--- a/app/components/menu-header/style.scss
+++ b/app/components/menu-header/style.scss
@@ -81,6 +81,7 @@ $color: desaturate(darken($secondary-master,9%),22%);
 
 .menu-header-login {
   padding: 30px;
+  max-width: 93%;
 }
 
 .menu-login-buttons {
